# calculator-cpp

./: CMakeLists.txt  Dockerfile  README.md  main.cc
calculator/: CMakeLists.txt  calculator.cc  calculator.hpp
include/: calculator.hpp
src/: calculator.cc  main.cc
test/: CMakeLists.txt  calculator_test.cc
